force-app/main/default/objects/Error_Item__c/Error_Item__c.object-meta.xml
<CustomObject>
    <description>To log exceptions</description>
    <label>Error Item</label>
    <nameField>
        <label>Error Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>