force-app/main/default/objects/Error_Item__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>