force-app/main/default/objects/Error_Item__c/fields/Error_Method__c.field-meta.xml
<CustomField>
    <fullName>Error_Method__c</fullName>
    <label>Error Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>