force-app/main/default/objects/Error_Item__c/fields/Error_Object__c.field-meta.xml
<CustomField>
    <fullName>Error_Object__c</fullName>
    <label>Error Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>