force-app/main/default/objects/Error_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Error_Object__c</columns>
    <columns>Error_Method__c</columns>
    <columns>Error_Owner__c</columns>
    <columns>Error_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>